Make test run name shorter

--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - run: poetry run mypy .
 
   test:
-    name: Run tests with pytst through poetry
+    name: Pytest via poetry
 
     strategy:
       matrix:
