--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -71,7 +71,7 @@ jobs:
         exclude:
           - os: windows-latest
             python-version: pypy3
-    continue-on-error: ${{ matrix.python-version == 'pypy3.9' || matrix.os == 'windows-latest' }}
+    continue-on-error: ${{ matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
