--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,48 +44,13 @@ profile = "black"
 multi_line_output = 3
 
 [tool.ruff]
-select =[
-    "F", # pyflakes
-    "E", # pycodestyle
-    "W", # pycodestyle
-    "C90", # mccabe complexity
-    "I", # isort
-    #"D", # pydocstyle
-    "UP", # pyupgrade
-    "N", # pep8-naming
-    "YTT", # flake8-2020
-    "ANN", # flake8-annotations
-    "S", # flake8-bandit
-    "BLE", # flake8-blind-except
-    "FBT", # flake8-boolean-trap
-    "B", # flake8-bugbear
-    "A", # flake8-builtins
-    "C4", # flake8-comprehensions
-    "T10", # flake8-debugger
-    "EM",  # flake8-errmsg
-    "ISC", # flake8-implicit-str-concat
-    "ICN", # flake8-import-conventions
-    "T20", # flake8-print
-    "Q", # flake8-quotes
-    "RET", # flake8-return
-    "SIM", # flake8-simplify
-    "TID", # flake8-tidy-imports
-    "ARG", # flake8-unused-arguments
-    "DTZ", # flake8-datetimez
-    # there shouldn't be datetimes in this repo anyways
-    "ERA", # eradicate
-    # this one passes for now, I'm not committed to leaving it on.
-    #"PD", # pandas-vet
-    # leaving this one off since it would require an additional dependency to ever matter.
-    "PGH", # pygrep-hooks
-    "PLC", # Pylint
-    "PLE", # Pylint
-    "PLR", # Pylint
-    "PLW", # Pylint
-    "RUF", # Ruff-specific rules
-    ]
+select =["ALL"]
+# DTZ (flake8-datetimez): shouldn't matter
+# ERA (eradicate) currently passes byt if it becomes an issue I might disable it
 extend-exclude=["examples/*", "stubs/*"]
-extend-ignore = [ "S101", "ANN101", "ANN102", "UP015", "RET505", "PLR2004"]
+extend-ignore = ["D", "PD", "S101", "ANN101", "ANN102", "UP015", "RET505", "PLR2004"]
+# D (pydocstyle): not ready to commit to this yet
+# PD (pandas-vet): not using pandas
 # S101 (assert used): ignored because we use assert for type narrowing and tests
 # ANN101 (no self annotation): ignored because self annotations feel redundant
 # ANN102 (no cls annotation): ignored because cls annotations also feel redundant
