--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -72,12 +72,12 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.10", "3.9","3.8", "3.7", "3.11", "pypy3.9" ]
+        python-version: [ "3.10", "3.9","3.8", "3.7", "3.11", "pypy3.8", "pypy3.9", "3.12.0-alpha.4" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         exclude:
           - os: windows-latest
             python-version: pypy3
-    continue-on-error: ${{ matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest' }}
+    continue-on-error: ${{ ((matrix.python-version == 'pypy3.8' || matrix.python-version == 'pypy3.9') && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha.4' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
