--- a/tox.ini
+++ b/tox.ini
@@ -33,12 +33,13 @@ commands =
     mypy .
 
 basepython = python3.10
+
 [testenv:lint]
 deps =
-    flake8 >= 5.0.4, < 6
+    ruff == v0.0.241
 commands =
-    flake8 cursesmenu
-    flake8 test
+    ruff cursesmenu
+    ruff test
 basepython = python3.10
 
 
