--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -73,7 +73,7 @@ jobs:
         exclude:
           - os: windows-latest
             python-version: pypy3
-    continue-on-error: ${{ matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha.4' }}
+    continue-on-error: ${{ (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha.4' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
