--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -68,7 +68,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.11", "3.10", "3.9","3.8", "3.7", "pypy3.8", "pypy3.9", "3.12.0-alpha.4" ]
+        python-version: ["3.11", "3.10", "3.9","3.8", "3.7", "pypy3.8", "pypy3.9", "3.12.0-alpha7" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         exclude:
           - os: windows-latest
