--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -99,7 +99,7 @@ jobs:
           - os: ubuntu-latest
             python-version: 3.11
             #we already did this one
-    continue-on-error: ${{ (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha.7' }}
+    continue-on-error: ${{ (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha7' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
