--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -91,7 +91,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.11", "3.10", "3.9","3.8", "3.7", "pypy3.8", "pypy3.9", "3.12.0-alpha7" ]
+        python-version: ["3.11", "3.10", "3.9","3.8", "pypy3.8", "pypy3.9", "3.12.0-beta.3" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         exclude:
           - os: windows-latest
@@ -99,7 +99,7 @@ jobs:
           - os: ubuntu-latest
             python-version: 3.11
             #we already did this one
-    continue-on-error: ${{ (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') || matrix.python-version=='3.12.0-alpha7' }}
+    continue-on-error: ${{ matrix.python-version=='3.12.0-beta.3' || (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
