--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -25,13 +25,7 @@ jobs:
         env:
           SKIP: "mypy,ruff,black,poetry-lock"
 
-  black-format:
-    name: Check format with black
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black@stable
-  ruff-lint:
+  ruff:
     name: Lint with ruff
     runs-on: ubuntu-latest
     steps:
@@ -43,8 +37,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ruff
-      - name: Run Ruff
+      - name: Ruff Lint
         run: ruff .
+      - name: Ruff Format
+        run: ruff format .
   mypy:
     name: Type check with mypy
     runs-on: ubuntu-latest
@@ -84,14 +80,13 @@ jobs:
     name: Pytest via poetry
     needs:
       - pre-commit
-      - black-format
-      - ruff-lint
+      - ruff
       - mypy
       - initial-test
 
     strategy:
       matrix:
-        python-version: ["3.11", "3.10", "3.9","3.8", "pypy3.8", "pypy3.9", "3.12.0-beta.3" ]
+        python-version: ["3.11", "3.10", "3.9", "3.8", "3.12", "pypy3.8", "pypy3.9", "3.13.0-alpha.1" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         exclude:
           - os: windows-latest
@@ -99,7 +94,7 @@ jobs:
           - os: ubuntu-latest
             python-version: 3.11
             #we already did this one
-    continue-on-error: ${{ matrix.python-version=='3.12.0-beta.3' || (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') }}
+    continue-on-error: ${{ matrix.python-version=='3.13.0-alpha.1' || (matrix.python-version == 'pypy3.11' && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8' || (matrix.python-version == 'pypy3.9' && matrix.os == 'windows-latest') }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -156,8 +151,7 @@ jobs:
       id-token: write
     needs:
       - pre-commit
-      - black-format
-      - ruff-lint
+      - ruff
       - mypy
       - test
 
