--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3.11
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -21,28 +21,14 @@ repos:
       - id: trailing-whitespace
       - id: check-merge-conflict
 
-  - repo: https://github.com/psf/black
-    rev: 23.7.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
-      - id: python-check-blanket-noqa
-      - id: python-check-blanket-type-ignore
       - id: python-check-mock-methods
-      - id: python-no-eval
-      - id: python-no-log-warn
       - id: python-use-type-annotations
       - id: rst-backticks
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
 
   - repo: https://github.com/bwhmather/ssort
     rev: v0.11.6
@@ -50,16 +36,11 @@ repos:
       - id: ssort
         exclude: '^cursesmenu/curses_menu.py$'
 
-  #  - repo: https://github.com/asottile/pyupgrade
-  #    rev: v3.2.2
-  #    hooks:
-  #    - id: pyupgrade
-  #      args: [--py38-plus]
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.284
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.2
     hooks:
       - id: ruff
+      - id: ruff-format
 
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.3.0
@@ -69,11 +50,6 @@ repos:
           - toml
           - pydocstyle[toml]
 
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v3.0.1
-    hooks:
-      - id: add-trailing-comma
-
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.16.0
     hooks:
@@ -81,13 +57,13 @@ repos:
         additional_dependencies: [ black==22.6.0 ]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.0
+    rev: v1.6.1
     hooks:
       - id: mypy
         additional_dependencies: [ types-Deprecated ]
 
   - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.323
+    rev: v1.1.332
     hooks:
       - id: pyright
         additional_dependencies:
@@ -98,7 +74,7 @@ repos:
           - importlib-metadata
           - deprecated
   - repo: https://github.com/python-poetry/poetry
-    rev: 1.5.0
+    rev: 1.6.0
     hooks:
       - id: poetry-check
       - id: poetry-lock
