--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,7 +131,7 @@ Deprecated = "^1.2.13"
 
 [tool.poetry.group.docs.dependencies]
 Sphinx = { version = "^7.0.0", python = ">=3.9,<4.0" }
-sphinx-rtd-theme = ">=2.0.0rc3"
+sphinx-rtd-theme = "^2.0.0"
 sphinx-autodoc-typehints = "^1.19.1"
 
 [tool.poetry.group.test]
@@ -150,5 +150,5 @@ coverage-conditional-plugin = "^0.9.0"
 
 [tool.poetry.group.type.dependencies]
 types-Deprecated = "^1.2.9"
-mypy = "<1.7.0"
+mypy = "<1.8.0"
 pytest = "^7.1.2"
