--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,10 @@ isolated_build = True
 # environment via the basepython key
 basepython = python3
 
+[testenv:pypy3]
+package_env=.pkg_pypy
+runner=virtualenv
+
 [testenv]
 deps =
     deprecated >= 1.2.13, < 2
