--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3.11
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -20,7 +20,6 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
       - id: check-merge-conflict
-
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
@@ -29,19 +28,16 @@ repos:
       - id: rst-backticks
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
-
   - repo: https://github.com/bwhmather/ssort
-    rev: 0.12.4
+    rev: 0.13.0
     hooks:
       - id: ssort
         exclude: '^cursesmenu/curses_menu.py$'
-
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.2.1
+    rev: v0.5.2
     hooks:
       - id: ruff
       - id: ruff-format
-
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.3.0
     hooks:
@@ -49,21 +45,18 @@ repos:
         additional_dependencies:
           - toml
           - pydocstyle[toml]
-
   - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
+    rev: 1.18.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [ black==22.6.0 ]
-
+        additional_dependencies: [black==22.6.0]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
+    rev: v1.10.1
     hooks:
       - id: mypy
-        additional_dependencies: [ types-Deprecated ]
-
+        additional_dependencies: [types-Deprecated]
   - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.350
+    rev: v1.1.371
     hooks:
       - id: pyright
         additional_dependencies:
@@ -74,7 +67,19 @@ repos:
           - importlib-metadata
           - deprecated
   - repo: https://github.com/python-poetry/poetry
-    rev: 1.7.0
+    rev: 1.8.0
     hooks:
       - id: poetry-check
       - id: poetry-lock
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.1
+    hooks:
+      - id: actionlint
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.13.0
+    hooks:
+      - id: yamlfmt
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.29.0
+    hooks:
+      - id: yamllint
