--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -5,13 +5,10 @@ on:
       - '*'
   pull_request:
   workflow_dispatch:
-
 name: Tests
-
 env:
   PYTHONWARNINGS: all
   TERM: xterm-256color
-
 jobs:
   pre-commit:
     name: Various quality checks with pre-commit
@@ -24,7 +21,6 @@ jobs:
       - uses: pre-commit/action@v3.0.0
         env:
           SKIP: "mypy,ruff,black,poetry-lock"
-
   ruff:
     name: Lint with ruff
     runs-on: ubuntu-latest
@@ -75,7 +71,6 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
-
   test:
     name: Pytest via poetry
     needs:
@@ -83,14 +78,15 @@ jobs:
       - ruff
       - mypy
       - initial-test
-
     strategy:
       matrix:
-        python-version: ["3.11", "3.10", "3.9", "3.8", "3.12", "pypy3.8", "pypy3.9", "3.13.0-alpha.2" ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: ["3.11", "3.10", "3.9", "3.8", "3.12", "pypy3.8", "pypy3.9", "3.13.0-alpha.2"]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
           - os: windows-latest
-            python-version: pypy3
+            python-version: pypy3.8
+          - os: windows-latest
+            python-version: pypy3.9
           - os: ubuntu-latest
             python-version: 3.11
             #we already did this one
@@ -126,12 +122,11 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel-finished: true
-
   results:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     name: Status of final test results
-    needs: [ test ]
+    needs: [test]
     steps:
       - run: |
           result="${{ needs.test.result }}"
@@ -140,9 +135,6 @@ jobs:
           else
             exit 1
           fi
-
-
-
   build-and-publish:
     name: Build and publish Python distributions to PyPI and TestPyPI
     runs-on: ubuntu-latest
@@ -154,7 +146,6 @@ jobs:
       - ruff
       - mypy
       - test
-
     steps:
       - uses: actions/checkout@v4
       - run: pipx install poetry
