Update ruff in tox

--- a/tox.ini
+++ b/tox.ini
@@ -36,10 +36,10 @@ basepython = python3.11
 
 [testenv:lint]
 deps =
-    ruff == v0.2.1
+    ruff == v0.5.2
 commands =
-    ruff cursesmenu
-    ruff test
+    ruff check cursesmenu
+    ruff check test
 basepython = python3.11
 
 
