--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,8 +127,8 @@ windows-curses = { version = "^2.3.2", platform = "win32" }
 [tool.poetry.group.docs]
 
 [tool.poetry.group.docs.dependencies]
-Sphinx = { version = "^7.0.0", python = ">=3.9,<4.0" }
-sphinx-rtd-theme = "^2.0.0"
+Sphinx = { version = "^8.0.0", python = ">=3.10"}
+sphinx-rtd-theme = { version= "^3.0.0rc1",  python = ">=3.10"}
 sphinx-autodoc-typehints = "^2.0.0"
 
 [tool.poetry.group.test]
@@ -146,5 +146,5 @@ coverage-conditional-plugin = "^0.9.0"
 [tool.poetry.group.type]
 
 [tool.poetry.group.type.dependencies]
-mypy = "<1.11.0"
+mypy = "<1.12.0"
 pytest = "^8.0.0"
