--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py{39,310,311,312},py,pypy3,type,lint,docs
+envlist = clean,py{39,310,311,312},pypy3,type,lint,docs
 isolated_build = True
 
 [tox:.package]
@@ -10,23 +10,24 @@ basepython = python3
 
 [testenv]
 deps =
-    coverage[toml] >= 7.3.2, < 8
-    coverage-conditional-plugin >= 0.9.0, < 1
-    pytest >= 8.0.0, < 9
-    pytest-cov >= 4.0.0, < 5
-    pexpect >= 4.8.0, < 5
-    pyte >= 0.8.1, < 1
+    coverage[toml]< 8
+    coverage-conditional-plugin<0.10.0
+    pytest<9.0.0
+    pyte<0.8.2
+    pytest-cov<6.0.0
+    pexpect<5.0.0
     windows-curses == 2.3.2;sys_platform=='win32'
 commands =
     pytest
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
+    uv_python_preference=managed-only
 
 [testenv:type]
 deps =
-    mypy >= 1.5.1, < 2
-    pytest  >= 7.1.2, < 8
+    mypy<1.12.0
+    pytest<9.0.0
 commands =
     mypy .
 
@@ -34,25 +35,25 @@ basepython = python3.12
 
 [testenv:lint]
 deps =
-    ruff == v0.5.2
+    ruff == v0.6.1
 commands =
     ruff check cursesmenu
     ruff check test
 basepython = python3.12
 
-
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
 basepython = python3.12
-deps = sphinx >= 7.1.2, < 8
-       sphinx-autodoc-typehints >= 2.0.0, < 3
-       sphinx-rtd-theme >= 2.0.0, < 3
-       deprecated >= 1.2.14, < 2
+setenv =
+    PYTHONWARNINGS=ignore::DeprecationWarning
+deps = sphinx<=9.0.0; python_version >='3.10'
+       sphinx-rtd-theme==3.0.0rc1; python_version >= '3.10'
+       sphinx-autodoc-typehints<3.0.0; python_version>='3.10'
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:clean]
-deps = coverage[toml] >= 7.3.2, < 8
-       coverage-conditional-plugin >= 0.9.0, < 1
+deps = coverage[toml]<8
+       coverage-conditional-plugin<0.10.0
 skip_install = true
 commands = coverage erase
