--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -13,57 +13,98 @@ jobs:
   pre-commit:
     name: Various quality checks with pre-commit
     runs-on: ubuntu-latest
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Set up Python
+        run: uv python install 3.12
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          python-version: "3.11"
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
       - uses: pre-commit/action@v3.0.0
         env:
-          SKIP: "mypy,ruff,black,poetry-lock"
+          SKIP: "mypy,ruff"
+      - name: Minimize uv cache
+        run: uv cache prune --ci
   ruff:
     name: Lint with ruff
     runs-on: ubuntu-latest
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Set up Python
+        run: uv python install 3.12
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
       - name: Ruff Lint
-        run: ruff check .
+        run: uv tool ruff check .
       - name: Ruff Format
-        run: ruff format .
+        run: uv tool ruff format .
+      - name: Minimize uv cache
+        run: uv cache prune --ci
   mypy:
     name: Type check with mypy
     runs-on: ubuntu-latest
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
-      - uses: actions/setup-python@v4
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Set up Python
+        run: uv python install 3.12
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          python-version: '3.11'
-          cache: 'poetry'
-      - run: poetry install
-      - run: poetry run mypy .
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
+      - run: uv tool mypy .
+      - name: Minimize uv cache
+        run: uv cache prune --ci
   initial-test:
     name: Test One Version First
     runs-on: ubuntu-latest
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
-      - uses: actions/setup-python@v4
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Set up Python
+        run: uv python install 3.12
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          python-version: 3.11
-          cache: 'poetry'
-      - run: poetry --version
-      - run: poetry install
-      - run: poetry run pytest
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
+      - name: Install the project
+        run: uv sync --all-extras --dev
+      - run: uv tool pytest
         name: Run tests
-      - run: poetry run coverage lcov
+      - run: uv tool coverage lcov
         name: Generate coverage report for this run
       - name: Upload coverage report for this run to coveralls
         uses: coverallsapp/github-action@master
@@ -71,8 +112,12 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
+      - name: Minimize uv cache
+        run: uv cache prune --ci
   test:
-    name: Pytest via poetry
+    name: Pytest via uv
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     needs:
       - pre-commit
       - ruff
@@ -80,31 +125,41 @@ jobs:
       - initial-test
     strategy:
       matrix:
-        python-version: ["3.11", "3.10", "3.9", "3.8", "3.12", "pypy3.8", "pypy3.9", "3.13.0-alpha.2"]
+        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy3.9", "3.13.0-rc.1", "3.14.0-alpha.0"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
           - os: windows-latest
-            python-version: pypy3.8
-          - os: windows-latest
             python-version: pypy3.9
           - os: ubuntu-latest
-            python-version: 3.11
+            python-version: "3.12"
             #we already did this one
-    continue-on-error: ${{ contains(matrix.python-version,'3.13') || (contains(matrix.python-version, 'pypy') && matrix.os == 'windows-latest') || matrix.python-version == 'pypy3.8'}}
+    continue-on-error: ${{ contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14') || (contains(matrix.python-version, 'pypy') && matrix.os == 'windows-latest')}}
     runs-on: ${{ matrix.os }}
     if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
-      - uses: actions/setup-python@v4
+      - name: Set up uv
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Set up uv
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: irm https://astral.sh/uv/install.ps1 | iex
+        shell: powershell
+      - name: Set up Python
+        run: uv python install ${{ matrix.python-version }}
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
-      - run: poetry --version
-      - run: poetry install --only main,test
-      - run: poetry run pytest
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
+      - name: Install the project
+        run: uv sync --all-extras --dev
+      - run: uv tool pytest
         name: Run tests
-      - run: poetry run coverage lcov
+      - run: uv tool coverage lcov
         name: Generate coverage report for this run
       - name: Upload coverage report for this run to coveralls
         uses: coverallsapp/github-action@master
@@ -112,6 +167,8 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
+      - name: Minimize uv cache
+        run: uv cache prune --ci
   coveralls:
     name: Finalize coveralls data
     needs: test
