--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -135,7 +135,12 @@ jobs:
         run: irm https://astral.sh/uv/install.ps1 | iex
         shell: powershell
       - name: Set up Python
+        if: ${{ ! (contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14')) }}
         run: uv python install ${{ matrix.python-version }}
+      - uses: actions/setup-python@v5
+        if: ${{ (contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14')) }}
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Restore uv cache
         uses: actions/cache@v4
         with:
