--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -114,11 +114,9 @@ jobs:
       - initial-test
     strategy:
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy3.9", "3.13.0-rc.1", "3.14.0-alpha.0"]
+        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy3.9", "pypy3.10", "3.13.0-rc.1", "3.14.0-alpha.0"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
-          - os: windows-latest
-            python-version: pypy3.9
           - os: ubuntu-latest
             python-version: "3.12"
             #we already did this one
