Update deploy step

--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -198,12 +198,9 @@ jobs:
       - test
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
-          cache: 'poetry'
-      - run: poetry --version
-      - run: poetry build
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Build package
+        run: uvx --from build pyproject-build --installer uv
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
