--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,16 +13,10 @@ formats:
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.11"
+    python: "3.12"
   jobs:
     post_create_environment:
-      # Install poetry
-      # https://python-poetry.org/docs/#installing-manually
-      - pip install poetry
-      # Tell poetry to not use a virtual environment
-      - poetry config virtualenvs.create false
-      # Install dependencies with 'docs' dependency group
-      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
-      - poetry install --with docs
+      # Install uv
+      - curl -LsSf https://astral.sh/uv/install.sh | sh
     post_install:
-      - pip install "Sphinx<=8.0.0,>=7.0.0"
+      - uv pip install "Sphinx<9.0.0" ""sphinx-autodoc-typehints<3.0.0" "sphinx-rtd-theme==3.0.0rc1"
