--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ vars.MAIN_PYTHON }}
       - uses: pre-commit/action@v3.0.1
         env:
           SKIP: "mypy,ruff"
@@ -30,24 +30,19 @@ jobs:
       UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - name: Set up uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Set up Python
-        run: uv python install 3.12
-      - name: Restore uv cache
-        uses: actions/cache@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
         with:
-          path: /tmp/.uv-cache
-          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          restore-keys: |
-            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-            uv-${{ runner.os }}
+          version: ${{ vars.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          cache-local-path: "/tmp/.uv-cache"
+      - name: Set up Python
+        run: uv python install ${{ vars.MAIN_PYTHON }}
       - name: Ruff Lint
         run: uv run ruff check .
       - name: Ruff Format
         run: uv run ruff format .
-      - name: Minimize uv cache
-        run: uv cache prune --ci
   mypy:
     name: Type check with mypy
     runs-on: ubuntu-latest
@@ -55,21 +50,16 @@ jobs:
       UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - name: Set up uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Set up Python
-        run: uv python install 3.12
-      - name: Restore uv cache
-        uses: actions/cache@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
         with:
-          path: /tmp/.uv-cache
-          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          restore-keys: |
-            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-            uv-${{ runner.os }}
+          version: ${{ vars.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          cache-local-path: "/tmp/.uv-cache"
+      - name: Set up Python
+        run: uv python install ${{ vars.MAIN_PYTHON }}
       - run: uv run mypy .
-      - name: Minimize uv cache
-        run: uv cache prune --ci
   initial-test:
     name: Test One Version First
     runs-on: ubuntu-latest
@@ -77,18 +67,15 @@ jobs:
       UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - uses: actions/checkout@v4
-      - name: Set up uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Set up Python
-        run: uv python install 3.12
-      - name: Restore uv cache
-        uses: actions/cache@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
         with:
-          path: /tmp/.uv-cache
-          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          restore-keys: |
-            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-            uv-${{ runner.os }}
+          version: ${{ vars.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          cache-local-path: "/tmp/.uv-cache"
+      - name: Set up Python
+        run: uv python install ${{ vars.MAIN_PYTHON }}
       - name: Install the project
         run: uv sync --all-extras --dev
       - run: uv run pytest
@@ -101,8 +88,6 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
-      - name: Minimize uv cache
-        run: uv cache prune --ci
   test:
     name: Pytest via uv
     env:
@@ -114,24 +99,24 @@ jobs:
       - initial-test
     strategy:
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy3.9", "pypy3.10", "3.13.0-rc.1", "3.14.0-alpha.0"]
+        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy3.10", "3.13.0-rc.1", "3.14.0-alpha.0"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
           - os: ubuntu-latest
-            python-version: "3.12"
+            python-version: ${{ vars.MAIN_PYTHON }}
             #we already did this one
     continue-on-error: ${{ contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14') || (contains(matrix.python-version, 'pypy') && matrix.os == 'windows-latest')}}
     runs-on: ${{ matrix.os }}
     if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set up uv
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Set up uv
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: irm https://astral.sh/uv/install.ps1 | iex
-        shell: powershell
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: ${{ vars.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          cache-local-path: "/tmp/.uv-cache"
       - name: Set up Python
         if: ${{ ! (contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14')) }}
         run: uv python install ${{ matrix.python-version }}
@@ -139,14 +124,6 @@ jobs:
         if: ${{ (contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14')) }}
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Restore uv cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.uv-cache
-          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          restore-keys: |
-            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-            uv-${{ runner.os }}
       - name: Install the project
         run: uv sync --all-extras --dev
       - run: uv run pytest
@@ -159,8 +136,6 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
-      - name: Minimize uv cache
-        run: uv cache prune --ci
   coveralls:
     name: Finalize coveralls data
     needs: test
@@ -198,9 +173,14 @@ jobs:
       - test
     steps:
       - uses: actions/checkout@v4
-      - name: Set up uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: ${{ vars.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+          cache-local-path: "/tmp/.uv-cache"
       - name: Build package
-        run: uvx --from build pyproject-build --installer uv
+        run: uv build
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
