--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -37,6 +37,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           cache-local-path: "/tmp/.uv-cache"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Python
         run: uv python install ${{ vars.MAIN_PYTHON }}
       - name: Ruff Lint
@@ -57,6 +58,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           cache-local-path: "/tmp/.uv-cache"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Python
         run: uv python install ${{ vars.MAIN_PYTHON }}
       - run: uv run mypy .
@@ -74,6 +76,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           cache-local-path: "/tmp/.uv-cache"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Python
         run: uv python install ${{ vars.MAIN_PYTHON }}
       - name: Install the project
@@ -117,6 +120,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           cache-local-path: "/tmp/.uv-cache"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Python
         if: ${{ ! (contains(matrix.python-version,'3.13') || contains(matrix.python-version,'3.14')) }}
         run: uv python install ${{ matrix.python-version }}
@@ -180,6 +184,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           cache-local-path: "/tmp/.uv-cache"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build package
         run: uv build
       - name: Publish package distributions to PyPI
