--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,10 +14,8 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.12"
-  jobs:
-    post_create_environment:
-      # Install uv
-      - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - uv sync --all-extras --dev
-    post_install:
-      - uv pip install "Sphinx<9.0.0" ""sphinx-autodoc-typehints<3.0.0" "sphinx-rtd-theme==3.0.0rc1"
+  commands:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv run python -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs/source $READTHEDOCS_OUTPUT/html
