--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,7 +141,8 @@ dev-dependencies = [
     "pytest-cov<6.0.0",
     "coverage-conditional-plugin<0.10.0",
     "mypy<1.12.0",
-    "ruff == 0.6.4"
+    "ruff == 0.6.5",
+    "uv == 0.4.12"
 ]
 
 [tool.hatch.build.targets.wheel]
